--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <h1 class="disp-4 text-center mb-5">WELCOME TO MERCY TODO</h1>
     <div class="row w-100 d-flex align-items-center" style="height: 100%;">
       <div class="col-xl-10 col-sm-10 bookTable mx-auto">
-        <div class="d-flex justify-content-center mb-2 ">
+        <div class="d-flex justify-content-center mb-2 py-3 ">
           <!-- <div class="col-9 ">
           </div> -->
-          <input type="text" id="inpTodo" placeholder="Input your Todo" class="w-25 form-control gap-3">
-          <div class="col-3 d-flex justify-content-center">
-            <button class="btn btn-sm py-0 btn-success mx-1" id="updateTodoBtn" onclick="addTodo()">Add todo</button>
-            <button class="btn btn-sm py-0 btn-danger mx-1" onclick="clearTodo()">Clear todo</button>
+          <div class="col-3 d-flex justify-content-center w-100">
+            <input type="text" id="inpTodo" placeholder="Input your Todo" class="w-25 form-control gap-3">
+            <button class="btn btn-sm py-0 btn-outline-success text-light  mx-1" id="updateTodoBtn" onclick="addTodo()">Add todo</button>
+            <button class="btn btn-sm py-0 btn-outline-danger  text-light mx-1" onclick="clearTodo()">Clear todo</button>
             <!-- <button class="btn btn-sm py-0 btn-danger " onclick="todoHistory()">Todo history</button> -->
             <!-- Scrollable modal -->
             <!-- Button trigger modal -->
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Launch demo modal
+          <button type="button" class="btn btn-sm btn-outline-info" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Task history
           </button>
 
           <!-- Modal -->
