--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <source src="./asset/course-video.mp4">
 </video>
   <div class="container d-flex align-items-center flex-column text-success" style="height: 100vh;">
-    <h1 class="display-4 text-center mb-5 text-light pt-3 bg-success">WELCOME: <span id="userName"></span></h1>
+    <h1 class="display-5 text-center mb-5 text-light pt-3 ">WELCOME: <span id="userName"></span></h1>
     <div class="row w-100 d-flex align-items-center" style="height: 100%;">
       <div class="col-xl-10 col-sm-10 bookTable mx-auto">
         <div class="d-flex justify-content-center mb-2 py-3 ">
