--- a/index.html
+++ b/index.html
@@ -3,32 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Todo App</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <style>
+    forInpArea::placeholder {
+            color: #999;
+           }
+  </style>
 </head>
 <body onload="getTodoLocal()
 " style="overflow-y: hidden;">
 <video autoplay muted loop id="video-background">
   <source src="./asset/course-video.mp4">
 </video>
-  <div class="container d-flex align-items-center flex-column text-success" style="height: 100vh;">
-    <h1 class="display-5 text-center mb-5 text-light pt-3 ">WELCOME: <span id="userName"></span></h1>
-    <div class="row w-100 d-flex align-items-center" style="height: 100%;">
-      <div class="col-xl-10 col-sm-10 bookTable mx-auto">
-        <div class="d-flex justify-content-center mb-2 py-3 ">
+  <div class="container-fluid d-flex align-items-center flex-column text-success" style="height: 90vh;">
+    <div class="row d-flex align-items-center w-100" style="height: 100%;">
+      <div class="col-xl-12 col-sm-10 bookTable mx-auto border">
+        <h3 class="display-5 text-center text-light pt-3">WELCOME, <span id="userName"></span></h3>
+        <div class="d-flex justify-content-center mb-2 py-1 ">
           <!-- <div class="col-9 ">
           </div> -->
-          <div class="col-3 d-flex justify-content-center w-100">
-            <input type="text" id="inpTodo" placeholder="Input your Todo" class="w-25 form-control gap-3">
-            <button class="btn btn-sm py-0 btn-outline-success text-light  mx-1" id="updateTodoBtn" onclick="addTodo()">Add todo</button>
-            <button class="btn btn-sm py-0 btn-outline-danger  text-light mx-1" onclick="clearTodo()">Clear todo</button>
+          <div class="col-sm-12 col-md-12 d-flex justify-content-center w-100 ">
+           <div class="w-100 m-0 p-0 text-center"> <input type="text" id="inpTodo" placeholder="Enter your Todo" class="forInpArea text-primary fw-bold form-control w-50 mx-auto" style="
+            color: #ffffff;"><br>
+            <button class="btn btn-sm py- btn-outline-success fw-bold  mx-" id="updateTodoBtn" onclick="addTodo()">Add Task</button>
+            <!-- <i class="fa-solid fa-plus fa-flip" id="updateTodoBtn" style="color: #ff3705;" onclick="addTodo()"></i> -->
+            <button  class="btn btn-sm py- btn-outline-danger  fw-bold mx-" onclick="clearTodo()">Clear Task</button>
             <!-- <button class="btn btn-sm py-0 btn-danger " onclick="todoHistory()">Todo history</button> -->
             <!-- Scrollable modal -->
             <!-- Button trigger modal -->
-          <button type="button" class="btn btn-sm btn-outline-info" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <button type="button" class="btn btn-sm py- btn-outline-info fw-bold" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Task history
-          </button>
+          </button></div>
 
           <!-- Modal -->
           <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -55,7 +63,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                  <!-- <button type="button" clss="btn btn-primary">Save changes</button> -->
                 </div>
               </div>
             </div>
@@ -63,9 +71,9 @@
           </div>
         </div>
         <div class=" w-100 p-2 h-100 inpBg" id="dispTodo" style="scroll-behavior: smooth; overflow-y: scroll; max-height: 50vh; "></div>
+        <div class="text-warning text-center fs-5 mx-auto " id="showCount"></div>
       </div>
         <!-- <div style="max-height: 50vh; width: 100%; background-color: red; "> -->
-          <p class="text-warning text-center fs-5 bg-primary w-25 mx-auto" id="showCount"></p>
         </div>
       </div>
     </div>
