--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </video>
   <div class="container-fluid d-flex align-items-center flex-column text-success" style="height: 90vh;">
     <div class="row d-flex align-items-center w-100" style="height: 100%;">
-      <div class="col-xl-12 col-sm-10 bookTable mx-auto border">
+      <div class="col-xl-12 col-sm-10 bookTable mx-auto border welcom-bg">
         <h3 class="display-5 text-center text-light pt-3">WELCOME, <span id="userName"></span></h3>
         <div class="d-flex justify-content-center mb-2 py-1 ">
           <!-- <div class="col-9 ">
