--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
       </div>
     </div>
       <script src="./js/bootstrap.js" defer></script>
-      <script src="index.js"></script>
+      <script src="todo.js" defer></script>
 </body>
 </html>
